Successfully received access token now

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
   <h1> {{ message }} </h1>
   <div> This is a body of text </div>
-  <div>Received: {{ auth }}</div>
+  <div>Received: {{ content }}</div>
 </body>
 </html>
