Fixed issue with making track feature request and begun work formatting data into webapp2 models

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <h1> {{ message }} </h1>
-  <div> This is a body of text </div>
+  <div> Welcome {{ user.display_name }}</div>
   <div>Received: {{ content }}</div>
 </body>
 </html>
