Allowed for connections outside of s3488797-cc2019 instance to connect to SQL databse, also created a base implementation of a tableau visualisation

--- a/html/analyse.html
+++ b/html/analyse.html
@@ -83,7 +83,7 @@
                 <img src="https://cdn4.vectorstock.com/i/1000x1000/59/33/business-analyst-financial-data-analysis-web-icon-vector-14155933.jpg" style="width:100%" />
 
                 <div class="text">
-                    <p>You love to listen this kind of music </p>
+                    <p>You listened to some songs </p>
                 </div>
 
             </div>
