--- a/html/analyse.html
+++ b/html/analyse.html
@@ -9,7 +9,63 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
-<link rel="stylesheet" href="scripts/style.css">
+<style>
+:root {
+  --spotify-green: #1db954;
+  --spotify-main: #212121;
+  --spotify-black: 	#121212;
+  --spotify-grey: #181818;
+  --spotify-player: #535353;
+  --spotify-lightgrey: #b3b3b3;
+}
+body {
+    font-family: "Lato", sans-serif;
+    background-color: var(--spotify-main);
+    color: white;
+}
+.header {
+    background-color: var(--spotify-black);
+}
+footer {
+    background-color: var(--spotify-darkgrey);
+}
+.mySlides {
+    display: none;
+    height: 100%;
+    width: 100%;
+    align-content: center;
+    background-image: linear-gradient(var(--spotify-player), var(--spotify-grey));
+}
+.landing {
+  height: 100%;
+  width: 80%;
+}
+#myDIV {
+    width: 100%;
+    padding: 50px 0;
+    text-align: center;
+    background-color: white;
+    color: black;
+    margin-top: 20px;
+    bottom: auto;
+    border: 2px solid #e7e7e7;
+}
+.start {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+</style>
 </head>
 
 <header>
@@ -98,6 +154,33 @@
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </footer>
-  <script type="text/javascript" src="scripts/slides.js"></script>
+  <script type="text/javascript">
+  // Varraible and Function for the slideshow
+  var slideIndex = 1;
+  showDivs(slideIndex);
+  function plusDivs(n) {
+      showDivs(slideIndex += n);
+  }
+
+  function showDivs(n) {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      if (n > x.length) { slideIndex = 1 }
+      if (n < 1) { slideIndex = x.length }
+      for (i = 0; i < x.length; i++) {
+          x[i].style.display = "none";
+      }
+      x[slideIndex - 1].style.display = "block";
+  }
+  function myFunction() {
+      var x = document.getElementById("myDIV");
+      if (x.style.display === "none") {
+          x.style.display = "block";
+      } else {
+          x.style.display = "none";
+      }
+  }
+
+  </script>
 </body>
 </html>
