--- a/html/analyse.html
+++ b/html/analyse.html
@@ -9,6 +9,41 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+<script type="text/javascript">
+        var vizList = ["http://public.tableau.com/views/RegionalSampleWorkbook/Flights",
+            "https://public.tableau.com/views/TimeStamps_and_Traits/TStampVSTraits2?:embed=y&:display_count=yes&publish=yes",
+            "https://10ay.online.tableau.com/t/spotilitics/views/TWB1_online/Sheet12/alistair.grevis-james@csl.com.au/Characteristics?iframeSizedToWindow=true&:embed=y&:showAppBanner=false&:display_count=no&:showVizHome=no",
+            "http://public.tableau.com/views/RegionalSampleWorkbook/Stocks",
+            "https://10ay.online.tableau.com/#/site/spotilitics/workbooks/546684/views"];
+
+        var viz,
+            vizLen = vizList.length,
+            vizCount = 0;
+        var userId = "ladecaz";
+        function createViz(vizPlusMinus) {
+            var vizDiv = document.getElementById("vizContainer"),
+                options = {
+                    "User_id": userId,
+                    hideTabs: true
+                };
+
+            vizCount = vizCount + vizPlusMinus;
+
+            if (vizCount >= vizLen) {
+            // Keep the vizCount in the bounds of the array index.
+                vizCount = 0;
+            } else if (vizCount < 0) {
+                vizCount = vizLen - 1;
+            }
+
+            if (viz) { // If a viz object exists, delete it.
+                viz.dispose();
+            }
+
+            var vizURL = vizList[vizCount];
+            viz = new tableau.Viz(vizDiv, vizURL, options);
+        }
+    </script>
 <style>
 :root {
   --spotify-green: #1db954;
@@ -33,8 +68,11 @@ footer {
     display: none;
     height: 100%;
     width: 100%;
+    text-align: center;
     align-content: center;
-    background-image: linear-gradient(var(--spotify-player), var(--spotify-grey));
+}
+.w3-display-container {
+  background-image: linear-gradient(var(--spotify-player), var(--spotify-grey));
 }
 .landing {
   height: 100%;
@@ -49,21 +87,6 @@ footer {
     margin-top: 20px;
     bottom: auto;
     border: 2px solid #e7e7e7;
-}
-.start {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 </style>
 </head>
@@ -85,7 +108,7 @@ footer {
     </div>
   </div>
 </header>
-<body>
+<body onload="createViz(0);">
 </br></br>
   <div class="w3-content w3-display-container" width="100%">
     <div class="mySlides">
@@ -94,33 +117,6 @@ footer {
         <p>You've listened to {{ user.listens_num }} since joining us, an averge of 13 songs per day. Your highest so far has been 45 in one day!</p>
         <p>Below you can see the times that you useualy listens to songs over different days</p>
       </div>
-      <div class='tableauPlaceholder' id='viz1549094215053' style='position: relative'>
-        <noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ti&#47;TimeStamps_and_Traits&#47;TStampVSTraits2&#47;1_rss.png' style='border: none' /></a></noscript>
-        <object class='tableauViz'  style='display:none;'>
-          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-          <param name='embed_code_version' value='3' />
-          <param name='site_root' value='' />
-          <param name='name' value='TimeStamps_and_Traits&#47;TStampVSTraits2' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' />
-          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ti&#47;TimeStamps_and_Traits&#47;TStampVSTraits2&#47;1.png' />
-          <param name='animate_transition' value='yes' />
-          <param name='display_static_image' value='yes' />
-          <param name='display_spinner' value='yes' />
-          <param name='display_overlay' value='yes' />
-          <param name='display_count' value='yes' />
-          <param name='filter' value='publish=yes' />
-        </object>
-      </div>
-      <script type='text/javascript'>
-      var divElement = document.getElementById('viz1549094215053');
-      var vizElement = divElement.getElementsByTagName('object')[0];
-      vizElement.style.width='100%';
-      vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-      var scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
-      </script>
     </div>
     <div class="mySlides">
       <div class="text">
@@ -143,9 +139,11 @@ footer {
 
       </div>
     </div>
-    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-    <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+    <button class="w3-button w3-black w3-display-left" onclick="javascript:nextPage(-1);">&#10094;</button>
+    <button class="w3-button w3-black w3-display-right" onclick="javascript:nextPage(1);">&#10095;</button>
+    <div id="vizContainer" style="width:800px; height:700px; margin: 0 auto"></div>
   </div>
+
   <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge" hight="10%" align="bottommiddle">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -179,6 +177,11 @@ footer {
       } else {
           x.style.display = "none";
       }
+  }
+
+  function nextPage(n) {
+    plusDivs(n);
+    createViz(n);
   }
 
   </script>
