Made final changes to accomadate the report

--- a/html/analyse.html
+++ b/html/analyse.html
@@ -25,7 +25,7 @@
                 options = {
                     hideTabs: true,
                     hideToolbar: true,
-                    'User Id': "ladecaz",
+                    'User Id': userId
                     showShareOptions: false
                 };
 
